--- a/StreamAPI/README
+++ b/StreamAPI/README
@@ -9,4 +9,13 @@
         {“a1”,”a2”,”a3”} => [“a1”,”a2”,”a3”]
     Stream4 - Создание стрима из файла
         “./files/1.txt” => [1,2,3,4]
+    Stream5 - Создание стрима из строки
+        “A string” => [“A”,” ”,”s”,”t”,”r”,”i”,”n”,”g”]
+    Stream6 - Создание параллельного стрима
+        “1”,”2”,”3” => [“1”,”a2”,”a3”]
+    Stream7 - Создание бесконечного стрима, который возводит каждое предыдущее значение в квадрат
+        2 => [“2”,”4”,”16”,”256”, …]
+
+
+
 
