--- a/Lambda/README
+++ b/Lambda/README
@@ -9,7 +9,10 @@ functional interface
     Lambda2 - Вернуть лямбду, которая поприветствует того, чье имя будет передано первым аргументом
     Lambda3 - Вернуть лямбду, которая принимает в качестве аргумента предыдущую лямбду, и
                 добавляет вывод “Have a nice day!” после выполнения лямбды
-
+    Lambda4 - Вернуть лямбду, которая возвращает текущее время
+    Lambda5 - Вернуть лямбду, которая проверяет строку на наличие в ней email.
+                Под email понимать любую строку, которая ввыглядит как
+                <любые символы>@<любые символы>.<любые символы>
 
 
 
