Lambda: change task5, add tasks 6-8

--- a/Lambda/README
+++ b/Lambda/README
@@ -13,6 +13,10 @@ functional interface
     Lambda5 - Вернуть лямбду, которая проверяет строку на наличие в ней email.
                 Под email понимать любую строку, которая ввыглядит как
                 <любые символы>@<любые символы>.<любые символы>
+    Lambda6 - К предыдущей лямбде добавить проверку на длину строки (> 10)
+    Lambda7 - К предыдущей лямбде добавить отрицание.
+    Lambda8 - Вернуть лямбду, которая проверяет число на принадлежность к ряду Фибоначчи.
+                Лямбда должна запоминать ранее вычисленные значения.
 
 
 
