Lambda: change task8, add tasks 9-10

--- a/Lambda/README
+++ b/Lambda/README
@@ -5,18 +5,21 @@ functional interface
 
 Решение:
 
-    Lambda1 - Вернуть лямбду, которая печатает “Hello world!”
-    Lambda2 - Вернуть лямбду, которая поприветствует того, чье имя будет передано первым аргументом
-    Lambda3 - Вернуть лямбду, которая принимает в качестве аргумента предыдущую лямбду, и
-                добавляет вывод “Have a nice day!” после выполнения лямбды
-    Lambda4 - Вернуть лямбду, которая возвращает текущее время
-    Lambda5 - Вернуть лямбду, которая проверяет строку на наличие в ней email.
-                Под email понимать любую строку, которая ввыглядит как
-                <любые символы>@<любые символы>.<любые символы>
-    Lambda6 - К предыдущей лямбде добавить проверку на длину строки (> 10)
-    Lambda7 - К предыдущей лямбде добавить отрицание.
-    Lambda8 - Вернуть лямбду, которая проверяет число на принадлежность к ряду Фибоначчи.
-                Лямбда должна запоминать ранее вычисленные значения.
+    Lambda1  - Вернуть лямбду, которая печатает “Hello world!”
+    Lambda2  - Вернуть лямбду, которая поприветствует того, чье имя будет передано первым аргументом
+    Lambda3  - Вернуть лямбду, которая принимает в качестве аргумента предыдущую лямбду, и
+                 добавляет вывод “Have a nice day!” после выполнения лямбды
+    Lambda4  - Вернуть лямбду, которая возвращает текущее время
+    Lambda5  - Вернуть лямбду, которая проверяет строку на наличие в ней email.
+                 Под email понимать любую строку, которая ввыглядит как
+                 <любые символы>@<любые символы>.<любые символы>
+    Lambda6  - К предыдущей лямбде добавить проверку на длину строки (> 10)
+    Lambda7  - К предыдущей лямбде добавить отрицание.
+    Lambda8  - Вернуть лямбду, которая проверяет число на принадлежность к ряду Фибоначчи.
+                 Лямбда должна запоминать ранее вычисленные значения.
+    Lambda9  - Вернуть лямбду, которая возвращает сумму двух входных аргументов.
+    Lambda10 - К предыдущей лямбде добавить возведение в квадрат
+
 
 
 
