Lambda: change task10, add tasks 11-12

--- a/Lambda/README
+++ b/Lambda/README
@@ -19,6 +19,11 @@ functional interface
                  Лямбда должна запоминать ранее вычисленные значения.
     Lambda9  - Вернуть лямбду, которая возвращает сумму двух входных аргументов.
     Lambda10 - К предыдущей лямбде добавить возведение в квадрат
+    Lambda11 - Вернуть лямбду, которая возвращает сумму трех входных аргументов
+    Lambda12 - Вернуть лямбду, которая возводит число в квадрат
+    Lambda13 - Добавить к предыдущей лямбде инкремент перед
+    Lambda14 - Добавить к предыдущей лямбде декремент после
+
 
 
 
