Lambda: fix tasks 13,14; add tasks 15-16

--- a/Lambda/README
+++ b/Lambda/README
@@ -23,6 +23,12 @@ functional interface
     Lambda12 - Вернуть лямбду, которая возводит число в квадрат
     Lambda13 - Добавить к предыдущей лямбде инкремент перед
     Lambda14 - Добавить к предыдущей лямбде декремент после
+    Lambda15 - Вернуть лямбду, которая решает уравнение x^2 + 3x – 1 для заданного x
+    Lambda16 - Вернуть лямбду, которая решает уравнение (x^2 + 3x – 1)^2 + 3*(x^2 + 3x – 1) - 1 для заданного x.
+                 Необходимо решить задачу переиспользованием предыдущей лямбды.
+    Lambda17 - Вернуть лямбду, которая решает уравнение x*x*x + y*y*y + z*z*z + u*u*u + v*v*v для заданных (x,y,z,u,v)
+    Lambda18 - Вернуть лямбду, которая возвращает лямбду, возводящую в квадрат по заданной степени
+
 
 
 
