Lambda: add docker, added to README

--- a/Lambda/README
+++ b/Lambda/README
@@ -13,6 +13,7 @@ functional interface
     Lambda5  - Вернуть лямбду, которая проверяет строку на наличие в ней email.
                  Под email понимать любую строку, которая ввыглядит как
                  <любые символы>@<любые символы>.<любые символы>
+
     Lambda6  - К предыдущей лямбде добавить проверку на длину строки (> 10)
     Lambda7  - К предыдущей лямбде добавить отрицание.
     Lambda8  - Вернуть лямбду, которая проверяет число на принадлежность к ряду Фибоначчи.
@@ -28,9 +29,14 @@ functional interface
                  Необходимо решить задачу переиспользованием предыдущей лямбды.
     Lambda17 - Вернуть лямбду, которая решает уравнение x*x*x + y*y*y + z*z*z + u*u*u + v*v*v для заданных (x,y,z,u,v)
     Lambda18 - Вернуть лямбду, которая возвращает лямбду, возводящую в квадрат по заданной степени
+    Lambda19 - Вернуть лямбду, которая производит композицию двух функций.
+                 (f1,f2) => f2(f1(x)) . Для этого реализовать функциональный интерфейс. Пример использования:
+                 Пример входа                           Пример выхода
+                 f.compose(x->x*2,x->x-1).apply(10))    19
 
 
 
+    Lambda1 - Lambda5 - реализованы на основе функциональных интерфейсов.
 
 
 
